--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <div id="flashcard-container" touch-action="none"></div>
 
       <div class="status">
-        <div><span class="correct"></span> right</div>
-        <div><span class="incorrect"></span> wrong</div>
+        <div><span class="correct">0</span> right</div>
+        <div><span class="incorrect">0</span> wrong</div>
       </div>
     </div>
 
